package parser

import (
	"context"
	"testing"
	"time"

	"github.com/escalier-lang/escalier/internal/ast"
	"github.com/escalier-lang/escalier/internal/snapshot"
	"github.com/gkampitakis/go-snaps/snaps"
	"github.com/stretchr/testify/assert"
)

func TestParseJSXNoErrors(t *testing.T) {
	tests := map[string]struct {
		input string
	}{
		"SelfClosingNoAttrs": {
			input: "<Foo />",
		},
		"SelfClosingAttrs": {
			input: "<Foo bar={5} baz=\"hello\" />",
		},
		"MultipleLines": {
			input: "<Foo\n  bar={5}\n  baz=\"hello\"\n/>",
		},
		"NoAttrsNoChildren": {
			input: "<Foo></Foo>",
		},
		"AttrsNoChildren": {
			input: "<Foo bar={5} baz=\"hello\"></Foo>",
		},
		"ChildElements": {
			input: "<div><span>hello</span>world</div>",
		},
		"ChildExpr": {
			input: "<div>hello, {msg}</div>",
		},
		"Nesting": {
			input: "<div>{<span>{foo}</span>}</div>",
		},
		"Fragment": {
			input: "<><Foo /><Bar /></>",
		},
		"SpreadAttrOnly": {
			input: "<Foo {...props} />",
		},
		"SpreadWithRegularAttrs": {
			input: "<Foo {...props} bar={5} />",
		},
		"MultipleSpreadAttrs": {
			input: "<Foo {...props1} {...props2} />",
		},
		"SpreadBetweenRegularAttrs": {
			input: "<Foo bar={5} {...props} baz=\"hello\" />",
		},
		"BooleanShorthand": {
			input: "<input disabled />",
		},
		"BooleanShorthandWithOtherAttrs": {
			input: "<input name=\"foo\" disabled checked />",
		},
		"MemberExprSelfClosing": {
			input: "<Foo.Bar />",
		},
		"MemberExprWithAttrs": {
			input: "<Foo.Bar baz={5} />",
		},
		"MemberExprWithChildren": {
			input: "<Foo.Bar>hello</Foo.Bar>",
		},
		"DeepMemberExpr": {
			input: "<Foo.Bar.Baz />",
		},
		"MemberExprInFragment": {
			input: "<><Foo.Bar /><Baz.Qux /></>",
		},
	}

	for name, test := range tests {
		t.Run(name, func(t *testing.T) {
			t.Parallel()
			source := &ast.Source{
				ID:       0,
				Path:     "input.esc",
				Contents: test.input,
			}

			ctx, cancel := context.WithTimeout(context.Background(), 1*time.Second)
			defer cancel()
			parser := NewParser(ctx, source)
			jsx := parser.jsxElementOrFragment()

			snaps.MatchSnapshot(t, snapshot.String(jsx))
			assert.Len(t, parser.errors, 0)
		})
	}
}

func TestParseJSXErrors(t *testing.T) {
	tests := map[string]struct {
		input string
	}{
		"MissingEqualsInExprAttr": {
			input: "<Foo bar {5} />",
		},
		"MissingEqualsInStringAttr": {
			input: "<Foo bar \"hello\" />",
		},
	}

	for name, test := range tests {
		t.Run(name, func(t *testing.T) {
			t.Parallel()
			source := &ast.Source{
				ID:       0,
				Path:     "input.esc",
				Contents: test.input,
			}

			ctx, cancel := context.WithTimeout(context.Background(), 1*time.Second)
			defer cancel()
			parser := NewParser(ctx, source)
			jsx := parser.jsxElementOrFragment()

			snaps.MatchSnapshot(t, snapshot.String(jsx))
			assert.Greater(t, len(parser.errors), 0)
			snaps.MatchSnapshot(t, snapshot.String(parser.errors))
		})
	}
}
