
[TestParseJSXNoErrors/SelfClosingNoAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        SelfClose: true,
        span: 0-7,
    },
    span: 0-7,
}
---

[TestParseJSXNoErrors/NoAttrsNoChildren - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        span: 0-5,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "Foo",
            span: 7-10,
        },
        span: 5-11,
    },
    span: 0-11,
}
---

[TestParseJSXNoErrors/SelfClosingAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 10-11,
                        },
                        span: 10-11,
                    },
                    span: 9-12,
                },
                span: 5-12,
            },
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXString{
                    Value: "hello",
                    span: 17-24,
                },
                span: 13-24,
            },
        },
        SelfClose: true,
        span: 0-27,
    },
    span: 0-27,
}
---

[TestParseJSXNoErrors/AttrsNoChildren - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 10-11,
                        },
                        span: 10-11,
                    },
                    span: 9-12,
                },
                span: 5-12,
            },
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXString{
                    Value: "hello",
                    span: 17-24,
                },
                span: 13-24,
            },
        },
        span: 0-25,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "Foo",
            span: 27-30,
        },
        span: 25-31,
    },
    span: 0-31,
}
---

[TestParseJSXNoErrors/ChildElements - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "div",
            span: 1-4,
        },
        span: 0-5,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "div",
            span: 30-33,
        },
        span: 28-34,
    },
    Children: []ast.JSXChild{
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Ident{
                    Name: "span",
                    span: 6-10,
                },
                span: 5-11,
            },
            Closing: &ast.JSXClosing{
                Name: &ast.Ident{
                    Name: "span",
                    span: 18-22,
                },
                span: 16-23,
            },
            Children: []ast.JSXChild{
                &ast.JSXText{
                    Value: "hello",
                    span: 11-16,
                },
            },
            span: 5-23,
        },
        &ast.JSXText{
            Value: "world",
            span: 23-28,
        },
    },
    span: 0-34,
}
---

[TestParseJSXNoErrors/ChildExpr - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "div",
            span: 1-4,
        },
        span: 0-5,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "div",
            span: 19-22,
        },
        span: 17-23,
    },
    Children: []ast.JSXChild{
        &ast.JSXText{
            Value: "hello, ",
            span: 5-12,
        },
        &ast.JSXExprContainer{
            Expr: &ast.IdentExpr{
                Name: "msg",
                span: 13-16,
            },
            span: 12-17,
        },
    },
    span: 0-23,
}
---

[TestParseJSXNoErrors/Nesting - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "div",
            span: 1-4,
        },
        span: 0-5,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "div",
            span: 27-30,
        },
        span: 25-31,
    },
    Children: []ast.JSXChild{
        &ast.JSXExprContainer{
            Expr: &ast.JSXElementExpr{
                Opening: &ast.JSXOpening{
                    Name: &ast.Ident{
                        Name: "span",
                        span: 7-11,
                    },
                    span: 6-12,
                },
                Closing: &ast.JSXClosing{
                    Name: &ast.Ident{
                        Name: "span",
                        span: 19-23,
                    },
                    span: 17-24,
                },
                Children: []ast.JSXChild{
                    &ast.JSXExprContainer{
                        Expr: &ast.IdentExpr{
                            Name: "foo",
                            span: 13-16,
                        },
                        span: 12-17,
                    },
                },
                span: 6-24,
            },
            span: 5-25,
        },
    },
    span: 0-31,
}
---

[TestParseJSXNoErrors/Fragment - 1]
&ast.JSXFragmentExpr{
    Opening: &ast.JSXOpening{
        span: 0-2,
    },
    Closing: &ast.JSXClosing{
        span: 16-19,
    },
    Children: []ast.JSXChild{
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Ident{
                    Name: "Foo",
                    span: 3-6,
                },
                SelfClose: true,
                span: 2-9,
            },
            span: 2-9,
        },
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Ident{
                    Name: "Bar",
                    span: 10-13,
                },
                SelfClose: true,
                span: 9-16,
            },
            span: 9-16,
        },
    },
    span: 0-19,
}
---

[TestParseJSXErrors/MissingEqualsInStringAttr - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                span: 5-8,
            },
        },
        span: 0-16,
    },
    Closing: &ast.JSXClosing{
        span: 19-19,
    },
    Children: []ast.JSXChild{
        &ast.JSXText{
            Value: " />",
            span: 16-19,
        },
    },
    span: 0-19,
}
---

[TestParseJSXErrors/MissingEqualsInExprAttr - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                span: 5-8,
            },
        },
        SelfClose: true,
        span: 0-15,
    },
    span: 0-15,
}
---

[TestParseJSXErrors/MissingEqualsInStringAttr - 2]
[]*parser.Error{
    &parser.Error{
        Span: 9-16,
        Message: "Expected '>' or '/>'",
    },
    &parser.Error{
        Span: 19-19,
        Message: "Expected '</'",
    },
    &parser.Error{
        Span: 19-19,
        Message: "Expected an identifier or '>'",
    },
    &parser.Error{
        Span: 19-19,
        Message: "Expected '>'",
    },
}
---

[TestParseJSXErrors/MissingEqualsInExprAttr - 2]
[]*parser.Error{
    &parser.Error{
        Span: 10-11,
        Message: "Expected '...' for spread attribute",
    },
}
---

[TestParseJSXNoErrors/MultipleLines - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 12-13,
                        },
                        span: 12-13,
                    },
                    span: 11-14,
                },
                span: 7-14,
            },
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXString{
                    Value: "hello",
                    span: 21-28,
                },
                span: 17-28,
            },
        },
        SelfClose: true,
        span: 0-31,
    },
    span: 0-31,
}
---

[TestParseJSXNoErrors/BooleanShorthandWithOtherAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "input",
            span: 1-6,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "name",
                Value: &&ast.JSXString{
                    Value: "foo",
                    span: 12-17,
                },
                span: 7-17,
            },
            &ast.JSXAttr{
                Name: "disabled",
                span: 18-26,
            },
            &ast.JSXAttr{
                Name: "checked",
                span: 27-34,
            },
        },
        SelfClose: true,
        span: 0-37,
    },
    span: 0-37,
}
---

[TestParseJSXNoErrors/MultipleSpreadAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props1",
                    span: 9-15,
                },
                span: 5-16,
            },
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props2",
                    span: 21-27,
                },
                span: 17-28,
            },
        },
        SelfClose: true,
        span: 0-31,
    },
    span: 0-31,
}
---

[TestParseJSXNoErrors/BooleanShorthand - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "input",
            span: 1-6,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "disabled",
                span: 7-15,
            },
        },
        SelfClose: true,
        span: 0-18,
    },
    span: 0-18,
}
---

[TestParseJSXNoErrors/SpreadAttrOnly - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props",
                    span: 9-14,
                },
                span: 5-15,
            },
        },
        SelfClose: true,
        span: 0-18,
    },
    span: 0-18,
}
---

[TestParseJSXNoErrors/SpreadWithRegularAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props",
                    span: 9-14,
                },
                span: 5-15,
            },
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 21-22,
                        },
                        span: 21-22,
                    },
                    span: 20-23,
                },
                span: 16-23,
            },
        },
        SelfClose: true,
        span: 0-26,
    },
    span: 0-26,
}
---

[TestParseJSXNoErrors/SpreadBetweenRegularAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1-4,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 10-11,
                        },
                        span: 10-11,
                    },
                    span: 9-12,
                },
                span: 5-12,
            },
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props",
                    span: 17-22,
                },
                span: 13-23,
            },
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXString{
                    Value: "hello",
                    span: 28-35,
                },
                span: 24-35,
            },
        },
        SelfClose: true,
        span: 0-38,
    },
    span: 0-38,
}
---

[TestParseJSXNoErrors/MemberExprSelfClosing - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 1-4,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 5-8,
            },
        },
        SelfClose: true,
        span: 0-11,
    },
    span: 0-11,
}
---

[TestParseJSXNoErrors/MemberExprWithAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 1-4,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 5-8,
            },
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 14-15,
                        },
                        span: 14-15,
                    },
                    span: 13-16,
                },
                span: 9-16,
            },
        },
        SelfClose: true,
        span: 0-19,
    },
    span: 0-19,
}
---

[TestParseJSXNoErrors/MemberExprInFragment - 1]
&ast.JSXFragmentExpr{
    Opening: &ast.JSXOpening{
        span: 0-2,
    },
    Closing: &ast.JSXClosing{
        span: 24-27,
    },
    Children: []ast.JSXChild{
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Member{
                    Left: &ast.Ident{
                        Name: "Foo",
                        span: 3-6,
                    },
                    Right: &ast.Ident{
                        Name: "Bar",
                        span: 7-10,
                    },
                },
                SelfClose: true,
                span: 2-13,
            },
            span: 2-13,
        },
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Member{
                    Left: &ast.Ident{
                        Name: "Baz",
                        span: 14-17,
                    },
                    Right: &ast.Ident{
                        Name: "Qux",
                        span: 18-21,
                    },
                },
                SelfClose: true,
                span: 13-24,
            },
            span: 13-24,
        },
    },
    span: 0-27,
}
---

[TestParseJSXNoErrors/DeepMemberExpr - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Member{
            Left: &ast.Member{
                Left: &ast.Ident{
                    Name: "Foo",
                    span: 1-4,
                },
                Right: &ast.Ident{
                    Name: "Bar",
                    span: 5-8,
                },
            },
            Right: &ast.Ident{
                Name: "Baz",
                span: 9-12,
            },
        },
        SelfClose: true,
        span: 0-15,
    },
    span: 0-15,
}
---

[TestParseJSXNoErrors/MemberExprWithChildren - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 1-4,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 5-8,
            },
        },
        span: 0-9,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 16-19,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 20-23,
            },
        },
        span: 14-24,
    },
    Children: []ast.JSXChild{
        &ast.JSXText{
            Value: "hello",
            span: 9-14,
        },
    },
    span: 0-24,
}
---
